<resources>
    <string name="BASE_URL">http://10.0.2.2:7087/</string>
    <string name="app_name">My Application</string>
    <string name="login_etPassword">Password</string>
    <string name="login_etUsername">Username</string>
    <string name="login_btnLoginTitle">Login</string>
    <string name="login_btnSignIn">SIGN IN</string>
    <string name="login_btnSignUp">SIGN UP</string>
    <string name="sign_up">Sign Up</string>
    <string name="etSignUp_nickname">Display Name</string>
    <string name="SignUp_etPasswordConfirm">Confirm Password</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="contact">Contact</string>
    <string name="last_message">Last Message</string>
    <string name="time">10:00</string>
    <string name="nickname">Nickname</string>
    <string name="server">Server</string>
    <string name="Channel_main_name">Main Channel</string>
    <string name="Channel_main_description">Regular Messages</string>
    <string name="connected_user">Connected User</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save_settings">Save settings</string>
    <string name="choose_image">Choose Image:</string>


</resources>