<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".RegisterScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#2B2A2A"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_Register"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp" />

    <LinearLayout
        android:id="@+id/linearLayout_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/login_etUsername"
            android:inputType="textPersonName"
            android:paddingBottom="30dp" />


        <EditText
            android:id="@+id/etSignUpPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/login_etPassword"
            android:inputType="textPassword"
            android:paddingBottom="30dp" />

        <EditText
            android:id="@+id/etSignUpPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/SignUp_etPasswordConfirm"
            android:inputType="textPassword"
            android:paddingBottom="30dp" />

        <EditText
            android:id="@+id/etNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/etSignUp_nickname"
            android:inputType="textPersonName"
            android:paddingBottom="30dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/add_profile_picture" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/login_bg"
            android:text="@string/login_btnSignUp"
            android:textSize="25sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
