<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PopupContact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_etUsername"
                android:inputType="textPersonName"
                android:paddingBottom="30dp" />

            <EditText
                android:id="@+id/etNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:paddingBottom="30dp" />

            <EditText
                android:id="@+id/etServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/server"
                android:inputType="textPersonName"
                android:paddingBottom="30dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>