<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:orientation="vertical"
        android:paddingVertical="80dp"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:id="@+id/linearLayout_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="40dp"
                android:paddingBottom="40dp"
                android:text="@string/login_btnLoginTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingBottom="30dp"
                android:autofillHints="username"
                android:hint="@string/login_etUsername"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingBottom="30dp"
                android:hint="@string/login_etPassword"
                android:autofillHints="password"
                android:inputType="textPassword" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login_btnSignIn"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="#28747E"
                    android:padding="10dp"
                    android:text="@string/login_btnSignUp"
                    android:textSize="25sp"
                    app:strokeColor="#6C9C36" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>