<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_login_screen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".LoginScreen">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/settings_icon_background"

        android:contentDescription="@string/title_activity_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_btnLoginTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#2B2A2A"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_gravity="center"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@mipmap/icon_d" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        tools:layout_editor_absoluteX="30dp">


        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/login_etUsername"
            android:inputType="textPersonName"
            android:paddingBottom="30dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/login_etPassword"
            android:inputType="textPassword"
            android:paddingBottom="30dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/login_bg"
            android:elevation="10dp"
            android:text="@string/login_btnSignIn"
            android:textColor="@color/white"

            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/login_btnSignUp"
                android:textColor="#E40D93A5"
                android:textSize="25sp" />

        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/tempPushNotification"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Push notification" />-->

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>